--- a/style.css
+++ b/style.css
@@ -65,9 +65,13 @@ nav {
     width:30%;
     align-items: center;
   }
+  .text {
+    font-size: 80%;
+  }
   .burger {
     display:block;
   }
+
 }
 .nav-active {
 transition: z-index 1s;
@@ -133,9 +137,9 @@ transition: z-index 1s;
 }
 .slideshowContainer .text {
   color: white;
-  margin-top: 50px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-top: 150px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 .fas {
   padding:20px;
