--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ nav {
     align-items: center;
   }
   .text {
-    font-size: 80%;
+    position: absolute;
+    font-size: 60%;
   }
   .burger {
     display:block;
